--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -1,7 +1,7 @@
 - page: index.md
   label: Home
 - separator: Landing pages
-- page: mock-saas/index.page.tsx
-  label: Mock SaaS example
+- page: example-saas/index.page.tsx
+  label: Example SaaS page
 - page: legacy-portal/training.page.tsx
   label: Portal training example
