chore: fix readme and deps structure for demo repo

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@redocly/realm": "^0.104.0"
+    "@redocly/realm": "*"
   }
 }
